<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110mt13.tritonprofessorraterv1.ForgotPassword"
    android:fitsSystemWindows="true"
    android:background="@mipmap/b11">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_forgetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="#ffffff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_findUser"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button7"
            android:padding="12dp"
            android:text="@string/findUser"/>


        <TextView android:id="@+id/forget_link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/remember"
            android:gravity="center"
            android:textSize="16sp"
            android:onClick="GoToLoginPage"/>

        <TextView android:id="@+id/forget_link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/noAcc"
            android:gravity="center"
            android:textSize="16sp"
            android:onClick="GoToRegisterPage"/>


    </LinearLayout>






</ScrollView>
