<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_refresh"
        android:title="refresh"
        android:icon="@drawable/ic_action_refresh"
        android:alphabeticShortcut="r"
        android:orderInCategory="1"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_Logout"
        app:showAsAction="never"
        android:title="Logout"
        />
</menu>