<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="radarx.tritonprofessorrater.MainActivity"
    android:background="@mipmap/b27"
    android:clickable="true">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="Search"
        android:id="@+id/search_B"
        android:layout_alignTop="@+id/search_ET"
        android:layout_alignParentRight="true"
        android:background="@drawable/button7"
        android:layout_alignParentEnd="true"
        android:textColor="#4c515f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_ET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Class/Professor Name"
        android:layout_toLeftOf="@+id/search_B"
        android:layout_toStartOf="@+id/search_B" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_B" />

</RelativeLayout>
